# Dragonflight_Dekk-Core

./: AUTHORS  README.md
backups/: 2021_final_incomplete_exile.cpp  2021_final_incomplete_exile_creaturespawn.sql  2021_final_incomplete_exile_creaturetemplate.sql  cs_cast_idkbutdifferentfromtc.cpp
cmake/: options.cmake  showoptions.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindMySQL.cmake  FindOpenSSL.cmake
dep/: CMakeLists.txt
dep/lualib/: CMakeLists.txt
src/common/: Banner.cpp  CMakeLists.txt  Common.h  GitRevision.cpp
src/common/Asio/: IpNetwork.cpp
src/common/Collision/Maps/: MMapDefines.h
src/common/Utilities/: Duration.h  FunctionProcessor.h  StopWatch.h  TaskScheduler.cpp  TaskScheduler.h  TimeUtils.cpp  TimeUtils.h  Timer.h  WowTime.cpp  WowTime.h
src/server/bnetserver/: Main.cpp  bnetserver.conf.dist
src/server/bnetserver/REST/: LoginRESTService.cpp
src/server/bnetserver/Server/: Session.cpp
src/server/bnetserver/Services/: AccountService.cpp  GameUtilitiesService.cpp  ServiceDispatcher.cpp
src/server/database/Database/: Field.h  FieldValueConverter.cpp  FieldValueConverters.h
src/server/database/Updater/: DBUpdater.cpp  DBUpdater.h  UpdateFetcher.cpp
src/server/game/: CMakeLists.txt
src/server/game/AI/: AIException.h  CreatureAI.cpp  CreatureAI.h  CreatureAIRegistry.cpp  CreatureAISelector.cpp  DamageEventMap.cpp  DamageEventMap.h
src/server/game/Accounts/: AccountMgr.cpp  RBAC.cpp  RBAC.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h  CriteriaHandler.cpp
src/server/game/Archaeology/: ArchaeologyMgr.cpp  ArchaeologyMgr.h  ArchaeologyPlayerMgr.cpp  ArchaeologyPlayerMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBotBuyer.cpp  AuctionHouseBotSeller.cpp
src/server/game/BattlePets/: BattlePet.cpp  BattlePet.h  BattlePetMgr.cpp  BattlePetMgr.h  BattlePetSystem.cpp  BattlePetSystem.h  PetBattle.cpp  PetBattle.h  PetBattleAbilityEffect.cpp  PetBattleAbilityEffect.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  (+1 more)
src/server/game/LuaEngine/: AuraMethods.h  BattleGroundHooks.cpp  BattleGroundMethods.h  BindingMap.h  CMakeLists.txt  CorpseMethods.h  CreatureHooks.cpp  CreatureMethods.h  ElunaCreatureAI.h  ElunaEventMgr.cpp  ElunaEventMgr.h  ElunaIncludes.h  ElunaInstanceAI.cpp  ElunaInstanceAI.h  ElunaQueryMethods.h  ElunaTemplate.h  ElunaUtility.cpp  ElunaUtility.h  GameObjectHooks.cpp  GameObjectMethods.h  GlobalMethods.h  GossipHooks.cpp  GroupHooks.cpp  GroupMethods.h  GuildHooks.cpp  GuildMethods.h  HookHelpers.h  Hooks.h  InstanceHooks.cpp  ItemHooks.cpp  ItemMethods.h  LuaEngine.cpp  LuaEngine.h  LuaFunctions.cpp  MapMethods.h  ObjectMethods.h  PacketHooks.cpp  PlayerHooks.cpp  PlayerMethods.h  QuestMethods.h  (+7 more)
src/server/proto/: ServiceBase.cpp
src/server/worldserver/: Main.cpp  resource.h  worldserver.conf.dist  worldserver.rc
useful stuff/: ChallengeModeHealth.txt  builderrorfixhelp.txt  missingtccommits.txt
useful stuff/NewIngameShop_ExampleProducts/: Currecies Product.sql  Gold Product.sql  ItemSet Product.sql  MidSummer's NightPack.sql  Mount Product.sql  Mount and Pet featured bundle.sql  Pet Product.sql  Transmog Product.sql
(+1300 files in other folders)
